--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "@prisma/client": "^7.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.2",
+    "prisma": "^6.19.1",
+    "typescript": "^5.9.3"
   }
 }
